<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/Text"
        android:text="@string/msg_demo_retrofit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_get_contributors"
                style="@style/Button.Indigo"
                android:layout_width="wrap_content"
                android:text="@string/btn_log_contributors_of" />

            <Button
                android:id="@+id/btn_get_contributors_with_email"
                style="@style/Button.Indigo"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/btn_log_contributors_with_email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_owner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/owner"
                android:text="square"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_repo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/repo_name"
                android:text="retrofit"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_logger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:reverseLayout="true"
        tools:item="@layout/item_log" />


</LinearLayout>